# voxtype

./: .gitignore  BUILD.md  DEVELOPMENT.md  DEVELOPMENT_WORKFLOW.md  DEV_QUICKSTART.md  HOTKEY_HELP.md  HOTKEY_TROUBLESHOOTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_STATUS.md  WINDOWS_SUPPORT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  voxtype.py
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  pr-check.yml  release.yml
docs/: HOTKEY_SYSTEM.md
scripts/: check-hotkeys.sh  ci-check-local.sh  create-placeholder-icons.py  dev-install.sh  dev-quick.sh  dev-reload.sh  find-working-hotkey.sh  generate-icons.sh  kill-all-voxtype.sh  setup.sh  test-single-hotkey.sh
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  openai.rs
